--- a/package.json
+++ b/package.json
@@ -30,12 +30,12 @@
   "dependencies": {
     "yui": "~3.14.1",
     "htmlparser2": "~3.4.0",
-    "vow": "~0.4.1"
+    "q": "~1.0.0"
   },
   "devDependencies": {
     "grunt-contrib-jshint": "~0.6.0",
     "grunt-contrib-clean": "~0.4.0",
-    "grunt-contrib-nodeunit": "~0.2.0"
+    "grunt-contrib-nodeunit": "~0.2.0",
   },
   "peerDependencies": {
     "grunt": "~0.4.2"
