--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "grunt-yui-template",
+  "name": "grunt-yui-template-compile",
   "description": "Precompile Y.Template files.",
   "version": "0.1.1",
-  "homepage": "https://github.com/earnubs/grunt-yui-template",
+  "homepage": "https://github.com/earnubs/grunt-yui-template-compile",
   "author": {
     "name": "Stephen Stewart",
     "email": "stephen.stewart@canonical.com",
@@ -10,15 +10,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/earnubs/grunt-yui-template.git"
+    "url": "git://github.com/earnubs/grunt-yui-template-compile.git"
   },
   "bugs": {
-    "url": "https://github.com/earnubs/grunt-yui-template/issues"
+    "url": "https://github.com/earnubs/grunt-yui-template-compile/issues"
   },
   "licenses": [
     {
       "type": "MIT",
-      "url": "https://github.com/earnubs/grunt-yui-template/blob/master/LICENSE-MIT"
+      "url": "https://github.com/earnubs/grunt-yui-template-compile/blob/master/LICENSE-MIT"
     }
   ],
   "engines": {
