--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "bugs": {
     "url": "https://github.com/earnubs/grunt-yui-template-compile/issues"
   },
+  "licence": "MIT",
   "licenses": [
     {
       "type": "MIT",
@@ -28,14 +29,15 @@
     "test": "grunt test"
   },
   "dependencies": {
-    "yui": "~3.14.1",
-    "htmlparser2": "~3.4.0",
-    "q": "~1.0.0"
+    "grunt": "^0.4.5",
+    "htmlparser2": "~3.9.0",
+    "q": "~1.4.1",
+    "yui": "~3.18.1"
   },
   "devDependencies": {
-    "grunt-contrib-jshint": "~0.6.0",
-    "grunt-contrib-clean": "~0.4.0",
-    "grunt-contrib-nodeunit": "~0.2.0"
+    "grunt-contrib-jshint": "~1.0.0",
+    "grunt-contrib-clean": "~1.0.0",
+    "grunt-contrib-nodeunit": "~1.0.0"
   },
   "peerDependencies": {
     "grunt": "~0.4.2"
